# AI_Job_Automation_Agent

./: .gitignore  10_3_26_tasks.md  Dockerfile  Dockerfile.playwright_base  IDE_README.md  PROJECT_FILES_STATUS.md  PROJECT_FILE_STATUS.md  README.md  SCRAPER_ENGINE_README.md  docker-compose.yml  dockerise.sh  java.env.template  main.py  master_run.py  push_secrets.sh  pyproject.toml  rag_system_init.py  requirements-dev.txt  requirements.txt
.chroma/: chroma.sqlite3
.github/workflows/: ci.yml  config_sync.yml  run_pipeline.yml  scheduler.yml
Utils/: __init__.py  agentops_safe.py  db_utils.py  normalise_dedupe.py  proxy_rate_limit.py  proxy_ratelimit.py  shutdown.py
agents/: __init__.py  analyser_agent.py  apply_agent.py  developer_agent.py  master_agent.py  scraper_agent.py  tracker_agent.py
api/: Dockerfile  __init__.py  api_server.py
assets/: Architecture_v2_Specification.md  System_Requirements_and_Constraints.md
auto_apply/: Dockerfile  apply_service.py  ats_detector.py  documentation.md  form_filler.py
chromadb/: Dockerfile
chrome_extension/: background.js  content.js  extension_config.js  manifest.json  mcp_client.js  notion_api.js  popup.html  popup.js  sidebar.css  sidebar.js
chrome_extension/content/: content.js
chrome_extension/sidebar/: sidebar.html  sidebar.js
config/: config_loader.py  platform_config.json  platform_settings.json  platforms.json  scoring_weights.json  search_queries.json  settings.py  user_preferences.json  user_profile.json  user_profile_template.json  user_settings.json
core/: job_filters.yaml  scraper_engine.py
database/: __init__.py  init.sql  local_postgres_client.py  schema.sql  supabase_client.py
database/migrations/: README.md  v001_baseline.sql  v002_rename_tables.sql  v004_canonical_lock.sql  v005_add_agent_column.sql  v006_add_metadata_column.sql
docker/: Dockerfile
extension/: extension_config.js  manifest.json  mcp_client.js  notion_api.js  sidebar.css  sidebar.html  sidebar.js
extension/background/: service_worker.js
extension/content_scripts/: content.js  sidebar.js
extension/options/: options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
extension/utils/: api_client.js  dom_detector.js
integrations/: __init__.py  llm_interface.py  notion.py
mcp/: Dockerfile  cache.py  integrations.py  mcp_client.py  mcp_context.db  mcp_schema.sql  security.py  server.py
mcp/tests/: test_mcp.py
n8n/workflows/: Job Automation.json  agent_importv2.json  ai_nodev3.json  perp_aiagent.json
rag_systems/: Dockerfile  __init__.py  chromadb_store.py  ingest_all_resumes.py  ingestion.py  production_server.py  rag_api.py  rag_pipeline.py  resume_config.json  resume_engine.py
rag_systems/.chroma/: chroma.sqlite3
scrapers/: Dockerfile  PROJECT_ARCHITECTURE.md  __init__.py  job_filters.yaml  jobspy_adapter.py  scraper_engine.py  scraper_service.py
scripts/: build_extension.sh  daily_cron.sh  setup.sh  start_production.sh  status.sh  stop_production.sh  test_e2e.sh
test_scripts/: test_apply.py  test_postgres.py  test_rag.py
tests/: test_analyser.py  test_auto_apply.py  test_fastapi.py  test_rag.py  test_rag.sh  test_scraper.py
tools/: __init__.py  agentops_tools.py  apply_tools.py  budget_tools.py  notion_tools.py  postgres_tools.py  rag_tools.py  scraper_tools.py  serp_api_tool.py  serpapi_tool.py
